# financial-dashboard

./: .gitignore  DESKTOP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: desktop-build.yml
.superpowers/brainstorm/1786-1776542145/content/: design-accounts.html  design-expenses.html  design-investments.html  layout.html  (+3 more)
docs/superpowers/plans/: 2026-04-18-financial-dashboard.md
docs/superpowers/specs/: 2026-04-18-financial-dashboard-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/accounts/: AccountList.tsx  BalanceTrendChart.tsx  DonutChart.tsx
src/components/expenses/: CategoryList.tsx  MonthlyBarChart.tsx  TransactionList.tsx
src/components/investments/: AssetList.tsx  PortfolioChart.tsx  ReturnBadges.tsx
src/components/layout/: AppShell.tsx  Header.tsx  MobileMenu.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/money/: MoneyPanels.tsx
src/components/overview/: AllocationBars.tsx  KpiCards.tsx  NetWorthChart.tsx
src/data/: mock.ts  seed.ts  state.ts  types.ts
src/hooks/: useFinanceData.tsx
src/lib/: database.ts  queryClient.ts  utils.ts
src/mocks/: handlers.ts
src/pages/: Accounts.tsx  Budget.tsx  Calendar.tsx  Expenses.tsx  FX.tsx  Home.tsx  Investments.tsx  Markets.tsx  Money.tsx  Month.tsx  Onboarding.tsx  Overview.tsx  Portfolio.tsx  Recurring.tsx  Reports.tsx  Transactions.tsx
src/services/: api.ts
src/stores/: dashboardStore.ts
(+1 files in other folders)
