[package]
name = "financial-dashboard"
version = "0.1.0"
description = "Tracker Finance desktop app"
authors = ["Salvatore De Rosa"]
edition = "2021"

[lib]
name = "financial_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
